--- a/elements/stone-cart-remove-btn.html
+++ b/elements/stone-cart-remove-btn.html
@@ -1,3 +1,5 @@
+<script src="btn-behavior.js"></script>
+
 <dom-module id="stone-cart-remove-btn">
   <template>
     <content></content>
@@ -7,18 +9,18 @@
     Polymer({
       is: 'stone-cart-remove-btn',
 
-      listeners: {
-        tap: 'removeItem'
-      },
+      behaviors: [BtnBehavior],
 
       properties: {
-        item: {
-          type: Object
+        kind: {
+          type:     String,
+          readOnly: true,
+          value:    'remove'
         }
       },
 
-      attached: function() {
-        this.cart = document.querySelector('stone-cart');
+      listeners: {
+        tap: 'removeItem'
       },
 
       removeItem: function() {
