--- a/elements/stone-cart-remove-btn.html
+++ b/elements/stone-cart-remove-btn.html
@@ -1,3 +1,20 @@
+<script src="btn-behavior.js"></script>
+
+<!--
+An element for removing the already added item from the cart. This element behaves like a wrapper for other elements providing the view. Hence, it can be used with any element you want.
+
+Example:
+
+    <stone-cart-remove-btn item='{"id":1}'>
+      <button>Remove from cart</button>
+    </stone-cart-remove-btn>
+
+    <stone-cart-remove-btn item='{"id":1}'>
+      <a href="#">Remove from cart</a>
+    </stone-cart-remove-btn>
+
+This element can exist outside of the stone-cart element.
+-->
 <dom-module id="stone-cart-remove-btn">
   <template>
     <content></content>
@@ -7,20 +24,45 @@
     Polymer({
       is: 'stone-cart-remove-btn',
 
-      listeners: {
-        tap: 'removeItem'
-      },
+      behaviors: [BtnBehavior],
 
       properties: {
+        /**
+         * The item associated with the button.
+         * The given item will be used to find the corresponding item
+         * in the cart to remove it. The item can
+         * have only the id property.
+         *
+         * Example:
+         *
+         *     <stone-cart-remove-btn item='{"id": 1}'>
+         *     </stone-cart-remove-btn>
+         */
         item: {
           type: Object
+        },
+
+        /**
+         * Indicates the type of the button.
+         */
+        kind: {
+          type:     String,
+          readOnly: true,
+          value:    'remove'
         }
       },
 
-      attached: function() {
-        this.cart = document.querySelector('stone-cart');
+      listeners: {
+        /**
+         * Calls the removeItem method if the tap event is
+         * fired on the button.
+         */
+        tap: 'removeItem'
       },
 
+      /**
+       * Removes the associated item from the cart.
+       */
       removeItem: function() {
         this.cart.removeItem(this.item);
       }
