--- a/stone-cart.html
+++ b/stone-cart.html
@@ -3,18 +3,26 @@
 <link rel="import" href="elements/stone-cart-remove-btn.html">
 
 <!--
-An element providing mechanism to manage items of the shopping cart.
-It doesn't provide UI.
+It is an element providing the common logic for adding items to the shopping cart and managing them within it.
 
 Example:
 
     <stone-cart items="{{items}}">
-      Total price: [[total]]
+      Total price: $[[total]]
 
       <template id="items" is="dom-repeat" items="{{items}}">
-        [[item.name]] [[item.price]]
+        [[item.name]] $[[item.price]]
+
+        <stone-cart-remove-btn item="{{item}}">
+          <button>Remove from cart</button>
+        </stone-cart-remove-btn>
+
       </template>
     </stone-cart>
+
+    <stone-cart-add-btn item='{"id": 1, "name": "Apple", "price": "1"}'>
+      <button>Add apple to cart</button>
+    </stone-cart-add-btn>
 
 @demo demo/index.html
 -->
@@ -36,6 +44,17 @@ Example:
       properties: {
         /**
          * List of items in the cart.
+         * Each item has to have the id and price properties. Other properties
+         * can be used without any restrictions.
+         *
+         * Example:
+         *
+         *     [{
+         *       id: 1,
+         *       price: 10,
+         *       name: 'Book',
+         *       img_src: '/images/book.png'
+         *     }]
          */
         items: {
           type:   Object,
@@ -44,7 +63,7 @@ Example:
         },
 
         /**
-         * Total price of items in the cart.
+         * The total price of items in the cart.
          */
         total: {
           type:     Number,
@@ -55,7 +74,7 @@ Example:
         },
 
         /**
-         * When a cart is empty, this property is true. This property
+         * When the cart is empty, this property is true. This property
          * is used as an attribute of the element.
          *
          * Example:
@@ -70,30 +89,81 @@ Example:
       },
 
       observers: [
-        '_updateState(items, items.length)'
+        '_updateState(items, items.length)',
+        '_fireReset(items)'
       ],
 
       /**
        * Adds a new item to the cart.
+       *
+       * @param {Object} item The item to be added to the cart.
        */
       addItem: function(item) {
         this.push('items', item);
 
-        this.fire('add-item', {item: item});
+        this._fireChange({item: item, action: 'add'});
       },
 
       /**
-       * Removes an item from the cart.
+       * Removes the item from the cart.
+       *
+       * @param {Object} item The item to be removed from the cart. It could
+       *     have only the id property.
        */
       removeItem: function(item) {
         var index = this.items.indexOf(item);
+
         this.splice('items', index, 1);
 
-        this.fire('remove-item', {item: item});
+        this._fireChange({item: item, action: 'remove'});
       },
 
-      addButtonFor: function(item) {
-        document.querySelector('stone-cart-add-btn[data-id="' + item.id + '"]');
+      /**
+       * Returns true if the given item is in the cart.
+       * Otherwise, false.
+       *
+       * @param {Object} item The Object having the id property.
+       */
+      hasItem: function(item) {
+        return this.items.findIndex(function(i) { return i.id == item.id; }) > -1;
+      },
+
+      /**
+       * Fires the `reset` event when the list of items is reset.
+       *
+       * Example:
+       *
+       *     document.querySelector('stone-cart').items = [
+       *       {id: 1, price: 10, name: 'Book'}
+       *     ];
+       *
+       * @event setup
+       */
+      _fireReset: function() {
+        this.fire('reset');
+      },
+
+      /**
+       * Fires the `change` event when the cart gets changed.
+       * The event keeps the item and action related to the change.
+       * There are 2 types of actions:
+       *
+       *  - add - a new item is added to the cart
+       *  - remove - an item is removed from the cart
+       *
+       * Example:
+       *
+       *     var cart = document.querySelector('stone-cart');
+       *
+       *     car.addEventListener('change', function(e) {
+       *       e.detail.item // the item related to the change
+       *       e.detail.action // the action indicating the kind of the change
+       *     });
+       *
+       * @event change
+       */
+      _fireChange: function(detail) {
+        this.fire('change', detail);
       },
 
       _computeTotal: function(items) {
