--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
       // Load and run all tests (.html, .js):
       WCT.loadSuites([
         'basic-test.html',
-        'basic-test.html?dom=shadow'
+        'btns-test.html'
       ]);
     </script>
   </body>
