better method names for getting cart buttons

--- a/stone-cart.html
+++ b/stone-cart.html
@@ -103,14 +103,14 @@ Example:
       /**
        * Returns an Array with elements for adding a given item to the cart.
        */
-      queryForAddBtnsOf: function(itemId) {
+      allAddBtnsOf: function(itemId) {
         return this._btns.add[itemId];
       },
 
       /**
        * Returns an Array with elements for removing a given item from the cart.
        */
-      queryForRemoveBtnsOf: function(itemId) {
+      allRemoveBtnsOf: function(itemId) {
         return this._btns.remove[itemId];
       },
 
