add documentation about elements and their purpose

--- a/demo/index.html
+++ b/demo/index.html
@@ -56,7 +56,7 @@
     <br><br>
 
     <stone-cart-add-btn item='{"id":3,"name": "Pear","price":5}'>
-      <button>Add a pear to the cart</button>
+      <a href="#">Add a pear to the cart</a>
     </stone-cart-add-btn>
 
     <script>
