--- a/test/btns-test.html
+++ b/test/btns-test.html
@@ -12,71 +12,99 @@
   </head>
   <body>
 
-    <test-fixture id="CartWithAddBtn">
+    <test-fixture id="CartAddBtn">
       <template>
-        <stone-cart>
-          <stone-cart-add-btn item='{"id":1}'>Add to cart</stone-cart-add-btn>
-        </stone-cart>
+        <stone-cart-add-btn item='{"id":1}'>Add to cart</stone-cart-add-btn>
+      </template>
+    </test-fixture>
+
+    <test-fixture id="CartRemoveBtn">
+      <template>
+        <stone-cart-remove-btn item='{"id":1}'>Remove from cart</stone-cart-remove-btn>
       </template>
     </test-fixture>
 
     <script>
-      suite('<stone-cart>', function() {
-        var cart;
+      suite('stone cart buttons', function() {
+        var btn, item = {id: 1};
 
         suite('basic usage', function() {
           setup(function() {
-            cart = fixture('CartWithAddBtn');
+            btn = fixture('CartAddBtn');
           });
 
           test('the button exposes the id of the related item', function() {
-            expect(
-              cart.querySelector('stone-cart-add-btn').itemId
-            ).to.equal(1);
-          });
-        });
-
-
-        suite('when adding the item to the cart', function() {
-          setup(function() {
-            cart = fixture('CartWithAddBtn');
-            cart.addItem({id: 1});
+            expect(btn.itemId).to.equal(1);
           });
 
           test('the button is aware that its item is in the cart', function() {
-            expect(
-              cart.querySelector('stone-cart-add-btn').selected
-            ).to.equal(true);
+            btn.cartItems = [{id: 1}];
+
+            expect(btn.selected).to.equal(true);
           });
         });
 
-        suite('when the item is already in the cart', function() {
+        suite('<stone-cart-add-btn>', function() {
           setup(function() {
-            cart = fixture('CartWithAddBtn');
-            cart.items = [{id: 1}];
+            btn = fixture('CartAddBtn');
           });
 
-          test('the button is aware that its item is in the cart', function() {
-            expect(
-              cart.querySelector('stone-cart-add-btn').selected
-            ).to.equal(true);
+          suite('when adding the item to the cart', function() {
+            setup(function() {
+              btn.addItem();
+            });
+
+            test('the item is added to the cart', function() {
+              expect(btn.cartItems.length).to.equal(1);
+            });
+
+            test('the button is aware that its item is in the cart', function() {
+              expect(btn.selected).to.equal(true);
+            });
+          });
+
+          suite('when the added item gets removed from the cart', function() {
+            setup(function() {
+              btn.cartItems = [item];
+
+              btn.splice('cartItems', 0, 1);
+            });
+
+            test('the button is aware that its item is not in the cart anymore', function() {
+              expect(btn.selected).to.equal(false);
+            });
           });
         });
 
-        suite('when removing the item from the cart', function() {
-          var item = {id: 1};
-
+        suite('<stone-cart-remove-btn>', function() {
           setup(function() {
-            cart = fixture('CartWithAddBtn');
-            cart.items = [item];
-
-            cart.removeItem(item);
+            btn = fixture('CartRemoveBtn');
           });
 
-          test('the button is aware that its item is not in the cart anymore', function() {
-            expect(
-              cart.querySelector('stone-cart-add-btn').selected
-            ).to.equal(false);
+          suite('when removing the item from the cart', function() {
+            setup(function() {
+              btn.cartItems = [item];
+
+              btn.removeItem();
+            });
+
+            test('the item is removed from the cart', function() {
+              expect(btn.cartItems.length).to.equal(0);
+            });
+
+            test('the button is aware that its item is not in the cart anymore', function() {
+              expect(btn.selected).to.equal(false);
+            });
+          });
+
+          suite('when the item gets added to the cart', function() {
+            setup(function() {
+              btn.push('cartItems', item);
+            });
+
+            test('the button is aware that its item is in the cart', function() {
+              expect(btn.selected).to.equal(true);
+            });
           });
         });
       });
