the stone-cart exposes the empty attribute instead of the disabled when there is no items

--- a/demo/basic-cart.html
+++ b/demo/basic-cart.html
@@ -13,7 +13,7 @@
         display: none;
       }
 
-      stone-cart[disabled] .msg-empty-cart {
+      stone-cart[empty] .msg-empty-cart {
         display: block;
       }
 
