--- a/elements/stone-cart-add-btn.html
+++ b/elements/stone-cart-add-btn.html
@@ -24,7 +24,7 @@ This element can exist outside of the stone-cart element.
     Polymer({
       is: 'stone-cart-add-btn',
 
-      behaviors: [BtnBehavior],
+      behaviors: [StoneCartBtnBehavior],
 
       properties: {
         /**
