--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -33,8 +33,8 @@
             cart = fixture('EmptyCart');
           });
 
-          test('disables the cart', function() {
-            expect(cart.hasAttribute('disabled')).to.equal(true);
+          test('exposes the empty attribute', function() {
+            expect(cart.hasAttribute('empty')).to.equal(true);
           });
         });
 
@@ -51,10 +51,9 @@
             expect(cart.total).to.equal(5);
           });
 
-          test('enables the cart', function() {
+          test('does not expose the empty attribute', function() {
             cart.items = items;
-
-            expect(cart.hasAttribute('disabled')).to.equal(false);
+            expect(cart.hasAttribute('empty')).to.equal(false);
           });
 
           test('fires the "reset" event', function() {
